# cpp_starter_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  deploy.sh
src/apps/: CMakeLists.txt  sandbox.cpp
src/lib/: CMakeLists.txt  clarg_parser.cpp  clarg_parser.hpp  instrumentor.cpp  instrumentor.hpp  log_sink.cpp  log_sink.hpp  logger.cpp  logger.hpp  matrix.cpp  matrix.hpp  timer.cpp  timer.hpp  toolbox.hpp
tests/: CMakeLists.txt  test_toolbox.cpp
